Bug 348496 - List of tags in brush presets docker is not refreshed after importing a resource bundle
Summary: List of tags in brush presets docker is not refreshed after importing a resou...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tagging (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Halla Rempt
URL:
Keywords:
: 352147 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-05-31 13:29 UTC by Ilya V. Portnov
Modified: 2021-03-25 14:15 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ilya V. Portnov 2015-05-31 13:29:09 UTC
When I import a resource bundle, usually some new tags are added for brush presets. But they are not immediately added to the list of tags available in brush presets docker. I have to restart krita to see new tags.

Reproducible: Always
Comment 1 Ilya V. Portnov 2015-06-21 09:30:44 UTC
Reproduces. 
Steps to reproduce:
1. Go to "Manage resources" dialog.
2. Import a bundle.
3. In the brush presets docker, you will see all imported presets if you select "All". But you will not see any tags which were created by importing the bundle. You have to restart Krita to see that tags.

Expected result: all tags from imported bundle are accessible after importing the bundle, without restarting Krita.
Comment 2 wolthera 2016-02-06 17:42:50 UTC
*** Bug 352147 has been marked as a duplicate of this bug. ***
Comment 3 Halla Rempt 2021-03-25 14:15:37 UTC
Git commit 1e86001fa01bfa8d17c82e57dd74d5921cc9ca0c by Halla Rempt.
Committed on 25/03/2021 at 14:15.
Pushed by rempt into branch 'master'.

Update the tag model if a storage is added

M  +27   -0    libs/resources/KisTagModel.cpp
M  +4    -0    libs/resources/KisTagModel.h

https://invent.kde.org/graphics/krita/commit/1e86001fa01bfa8d17c82e57dd74d5921cc9ca0c