Update the tag model if a storage is added

BUG:348496